fix(cards icons): 🐛 change z-index of heart icon and its card to improve cursor response

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -53,6 +53,7 @@
             justify-self: end;
             padding-right: 0.5em;
             font-size: 1.5rem;
+            z-index: 2;
         }
     }
     &--1 {
